--- a/index.html
+++ b/index.html
@@ -280,7 +280,10 @@
       </div>
 
       <div class="gallery">
-        Gallery
+        <figure class="gallery__item gallery__item--1">
+          <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img">
+        </figure>
+        <img src="img/gal-2.jpeg" alt="Gallery image 2" class="gallery__img">
       </div>
 
       <div class="footer">
